# SeverinBumbaru2023

./: CMakeLists.txt  README.md  main.cpp
assets/: atlas.json
data/: ghost.json  player.json
gui/: game_over.tgui  instructions.tgui  main_menu.tgui  story.tgui
gui/themes/: Black.txt
source/: Collision.cpp  Collision.h  Fibonacci.cpp  Fibonacci.hpp  HUD.cpp  HUD.hpp  Map.cpp  Map.hpp
source/MKE/: Animation.cpp  Animation.hpp  State.hpp  Utility.cpp  Utility.hpp
source/components/: CoreComponents.hpp  GhostComponents.hpp  PlayerComponents.hpp
source/core/: Game.cpp  Game.hpp  GameData.cpp  GameData.hpp
source/states/: GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  InstructionsState.cpp  InstructionsState.hpp  MainMenuState.cpp  MainMenuState.hpp  StoryState.cpp  StoryState.hpp
source/systems/: CoreSystems.cpp  CoreSystems.hpp  GhostSystems.cpp  GhostSystems.hpp  PlayerSystems.cpp  PlayerSystems.hpp
